Add Netshoot pod for Test cases

--- a/demo/dev/app.manifests.yaml
+++ b/demo/dev/app.manifests.yaml
@@ -64,3 +64,20 @@ spec:
     protocol: TCP
   selector:
     app: nginx
+
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: netshoot
+  namespace: dev
+  labels:
+    app: netshoot
+spec:
+  containers:
+  - name: netshoot
+    image: nicolaka/netshoot:latest
+    # Just spin & wait forever
+    command: [ "/bin/bash", "-c", "--" ]
+    args: [ "while true; do curl -m3 http://nginx-svc; sleep 3; done;" ]
+    resources: {}
