--- a/demo/dev/policies.yaml
+++ b/demo/dev/policies.yaml
@@ -33,3 +33,19 @@ spec:
             app: nginx
   policyTypes:
   - Egress
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: netshoot
+  namespace: dev
+spec:
+  podSelector:
+    matchLabels:
+      app: netshoot
+  egress: 
+    - {}
+  policyTypes:
+    - Egress
