Cluster reports YAML
Update schedules to run more frequently in this workshop. Edits to report selectors

--- a/demo/40-compliance-reports/cluster-reports.yaml
+++ b/demo/40-compliance-reports/cluster-reports.yaml
@@ -5,23 +5,35 @@ metadata:
   name: cluster-inventory
 spec:
   reportType: inventory
-  schedule: '*/30 * * * *'
+  schedule: '*/10 * * * *'
+
+#---
+#apiVersion: projectcalico.org/v3
+#kind: GlobalReport
+#metadata:
+#  name: cluster-network-access
+#spec:
+#  reportType: network-access
+#  schedule: '*/10 * * * *'
+
+# uncomment policy-audit report if you configured audit logs for EKS cluster https://docs.tigera.io/compliance/compliance-reports/compliance-managed-cloud#enable-audit-logs-in-eks
+---
+apiVersion: projectcalico.org/v3
+kind: GlobalReport
+metadata:
+  name: cluster-policy-audit
+spec:
+  reportType: policy-audit
+  schedule: '*/10 * * * *'
 
 ---
 apiVersion: projectcalico.org/v3
 kind: GlobalReport
 metadata:
-  name: cluster-network-access
+  name: default-dev-network-access
 spec:
   reportType: network-access
-  schedule: '*/30 * * * *'
-
-# uncomment policy-audit report if you configured audit logs for EKS cluster https://docs.tigera.io/compliance/compliance-reports/compliance-managed-cloud#enable-audit-logs-in-eks
-# ---
-# apiVersion: projectcalico.org/v3
-# kind: GlobalReport
-# metadata:
-#   name: cluster-policy-audit
-# spec:
-#   reportType: policy-audit
-#   schedule: '*/30 * * * *'
+  endpoints:
+    namespaces:
+      names: ["dev","default"]
+  schedule: '*/10 * * * *'
