--- a/demo/90-anomaly-detection/ad-jobs-deployment-managed.yaml
+++ b/demo/90-anomaly-detection/ad-jobs-deployment-managed.yaml
@@ -75,7 +75,7 @@ spec:
       - name: tigera-pull-secret
       containers:
       - name: ad-jobs
-        image: quay.io/tigera/anomaly_detection_jobs:v3.7.0
+        image: quay.io/tigera/anomaly_detection_jobs:v3.9.0
         resources:
           requests:
             memory: 1G
@@ -85,6 +85,8 @@ spec:
         env:
           - name: CLUSTER_NAME
             value: "$CALICOCLUSTERNAME"
+          - name: ELASTIC_HOST
+            value: "tigera-secure-es-gateway-http.tigera-elasticsearch.svc"
           - name: ELASTIC_PORT
             value: "9200"
           - name: ES_CA_CERT
@@ -108,7 +110,7 @@ spec:
           - name: AD_DnsLatency_IsolationForest_score_threshold
             value: "-0.886"
           - name: AD_ProcessRestarts_threshold
-            value: "5"
+            value: "100"
           - name: AD_port_scan_threshold
             value: "200"
           - name: AD_ip_sweep_threshold
@@ -128,7 +130,7 @@ spec:
             mountPath: /certs/es-ca.pem
             subPath: es-ca.pem
         command: ["python3"]
-        args: ["main.py"]
+        args: ["-m", "adj"]
       volumes:
         - name: es-certs
           secret:
@@ -136,7 +138,7 @@ spec:
             items:
               - key: tls.crt
                 path: es-ca.pem
-            secretName: tigera-secure-es-http-certs-public
+            secretName: tigera-secure-es-gateway-http-certs-public
         - name: host-volume
           hostPath:
-            path: /var/log/calico
+            path: /var/log/calico/anomaly_detection_jobs
