--- a/demo/40-compliance-reports/daily-cis-results.yaml
+++ b/demo/40-compliance-reports/daily-cis-results.yaml
@@ -6,7 +6,7 @@ metadata:
     deployment: production
 spec:
   reportType: cis-benchmark
-  schedule: 0/10 * * * *
+  schedule: '*/10 * * * *'
   cis:
     highThreshold: 100
     medThreshold: 50
