--- a/demo/90-anomaly-detection/ad-jobs-deployment-managed.yaml
+++ b/demo/90-anomaly-detection/ad-jobs-deployment-managed.yaml
@@ -75,18 +75,48 @@ spec:
       - name: tigera-pull-secret
       containers:
       - name: ad-jobs
-        image: quay.io/tigera/anomaly_detection_jobs:v3.10.0
+        image: quay.io/tigera/anomaly_detection_jobs:v3.11.2
         resources:
           requests:
             memory: 1G
         securityContext:
           privileged: true
           allowPrivilegeEscalation: true
+        startupProbe:
+          httpGet:
+            path: /ad/ping
+            port: 8000
+            scheme: HTTP
+          initialDelaySeconds: 40
+          periodSeconds: 30
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 10
+        livenessProbe:
+          httpGet:
+            path: /ad/ping
+            port: 8000
+            scheme: HTTP
+          periodSeconds: 20
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 5
+        readinessProbe:
+          httpGet:
+            path: /ad/ping
+            port: 8000
+            scheme: HTTP
+          periodSeconds: 20
+          timeoutSeconds: 1
+          successThreshold: 1
+          failureThreshold: 5
         env:
-          - name: CLUSTER_NAME
-            value: "$CALICOCLUSTERNAME"
+          - name: AD_NEED_API
+            value: "true"
           - name: ELASTIC_HOST
             value: "tigera-secure-es-gateway-http.tigera-elasticsearch.svc"
+          - name: CLUSTER_NAME
+            value: "$CALICOCLUSTERNAME"
           - name: ELASTIC_PORT
             value: "9200"
           - name: ES_CA_CERT
@@ -101,6 +131,8 @@ spec:
               secretKeyRef:
                 key: password
                 name: tigera-ee-ad-job-elasticsearch-access
+          - name: AD_DISABLED_JOBS
+            value: "l7_latency,http_connection_spike,http_verbs,http_response_codes,process_restarts"      
           - name: AD_max_docs
             value: "100000"
           - name: AD_train_interval_minutes
@@ -110,7 +142,7 @@ spec:
           - name: AD_DnsLatency_IsolationForest_score_threshold
             value: "-0.886"
           - name: AD_ProcessRestarts_threshold
-            value: "100"
+            value: "5"
           - name: AD_port_scan_threshold
             value: "200"
           - name: AD_ip_sweep_threshold
@@ -122,7 +154,7 @@ spec:
           - name: AD_BytesOutModel_min_size_for_train
             value: "1000"
           - name: AD_debug
-            value: "True"
+            value: "True"    
         volumeMounts:
           - name: host-volume
             mountPath: /home/idsuser/anomaly_detection_jobs/models
