--- a/demo/40-compliance-reports/compliance-reporter-pod.yaml
+++ b/demo/40-compliance-reports/compliance-reporter-pod.yaml
@@ -21,19 +21,19 @@ spec:
     # Modify this image name, if you have re-tagged the image and are using a local
     # docker image repository.
     # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    image: quay.io/tigera/compliance-reporter:v3.10.0
+    image: quay.io/tigera/compliance-reporter:v3.11.2
     # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    env: 
-      # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    - name: TIGERA_COMPLIANCE_REPORT_NAME
-      value: cluster-policy-audit
+    env:
       # Modify this value with name of an existing globalreport resource.
+      # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    - name: cluster-policy-audit
+      value: <report name e.g. cluster-policy-audit>
+      # Modify these values with the start and end time frame that should be reported on.
       # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     - name: TIGERA_COMPLIANCE_REPORT_START_TIME
       value: <report start time in UTC RFC3339 format, e.g.  2019-03-23T14:20:00Z>
     - name: TIGERA_COMPLIANCE_REPORT_END_TIME
-      value: <report start time in UTC RFC3339 format, e.g.  2019-03-23T14:20:00Z>
-      # Modify these values with the start and end time frame that should be reported on.
+      value: <report start time in UTC RFC3339 format, e.g. 2019-03-23T15:10:00Z>
       # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     - name: LOG_LEVEL
       value: "warning"
