--- a/demo/40-compliance-reports/compliance-reporter-pod.yaml
+++ b/demo/40-compliance-reports/compliance-reporter-pod.yaml
@@ -21,12 +21,12 @@ spec:
     # Modify this image name, if you have re-tagged the image and are using a local
     # docker image repository.
     # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    image: quay.io/tigera/compliance-reporter:v3.11.2
+    image: quay.io/tigera/compliance-reporter:v3.12.0
     # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     env:
       # Modify this value with name of an existing globalreport resource.
       # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    - name: cluster-policy-audit
+    - name: TIGERA_COMPLIANCE_REPORT_NAME
       value: <report name e.g. cluster-policy-audit>
       # Modify these values with the start and end time frame that should be reported on.
       # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
