--- a/demo/tiers/tiers.yaml
+++ b/demo/tiers/tiers.yaml
@@ -13,3 +13,11 @@ metadata:
   name: platform
 spec:
   order: 500
+
+---
+apiVersion: projectcalico.org/v3
+kind: Tier
+metadata:
+  name: application
+spec:
+  order: 600
