add metadata policy, update module5 content

--- a/demo/10-security-controls/allow-kube-dns.yaml
+++ b/demo/10-security-controls/allow-kube-dns.yaml
@@ -17,6 +17,13 @@ spec:
       selector: "k8s-app == 'kube-dns'"
       ports:
       - '53'
+  - action: Allow
+    protocol: TCP
+    source: {}
+    destination:
+      selector: "k8s-app == 'kube-dns'"
+      ports:
+      - '53'
   - action: Pass
     source: {}
     destination: {}
